--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
 </head>
 <body class="page">
   <div class="container">
-      <h1 class="name">
-          <a class="folio">
-              Julia Kovylina
-          </a>
-      </h1>
+      <div class="content">
+          <h1 class="content-text">Yulia Kovylina</h1>
+          <p class="content-text">Junior Frontend Developer</p>
+      </div>
   </div>
 <script src="script.js"></script>
 </body>
